# FSR-Reloaded

./: README.md  build.gradle  gradle.properties  settings.gradle
net/minecraft/client/: MinecraftClient.java
net/minecraft/client/render/: GameRenderer.java  WorldRenderer.java
src/client/java/com/fsr2mod/: FSRMod.java
src/client/java/com/fsr2mod/compat/: DistantHorizonsCompat.java  IrisCompat.java  ModMenuCompat.java  RenderScaleCompat.java  SodiumCompat.java  VulkanModCompat.java
src/client/java/com/fsr2mod/config/: FSRConfig.java
src/client/java/com/fsr2mod/fsr/: FSR1Pipeline.java  FSR2Pipeline.java  FSR3Pipeline.java  FSRProcessor.java  JitterManager.java  ScaledRenderTarget.java  ShaderBinaryCache.java  SharedTextureManager.java  TemporalBlendShader.java  build.gradle  pumpkin.toml
src/client/java/com/fsr2mod/gui/: FSRSlider.java  SettingsScreen.java  ToggleSwitch.java
src/client/java/com/fsr2mod/mixin/: FramebufferBlitMixin.java  GameRendererMixin.java  GlTextureIdAccessor.java  MinecraftClientAccessor.java  MinecraftClientMixin.java  RenderTargetAccessor.java  WindowMixin.java
src/client/java/com/fsr2mod/mixin/vulkanmod/: VulkanModDeviceMixin.java  VulkanModMainPassMixin.java  VulkanModSwapchainMixin.java
src/client/java/com/fsr2mod/sodium/: SodiumCompat.java  SodiumConfigEntry.java
src/client/java/com/fsr2mod/vulkan/: Fsr4Native.java  GLSemaphoreManager.java  VulkanInterop.java
src/main/resources/: fabric.mod.json  fsr-reloaded.accesswidener  fsr2mod.mixins.json
src/main/resources/assets/fsr2mod/lang/: en_us.json
src/native/fsrvk/: CMakeLists.txt  d3d12_device.cpp  d3d12_device.h  d3d12_shared_resources.cpp  d3d12_shared_resources.h  fsr4_context.cpp  fsr4_context.h  jni_bridge.cpp  sync_manager.cpp  sync_manager.h  vulkan_device.cpp  vulkan_device.h  vulkan_memory.cpp  vulkan_memory.h
